# tunacode

./: .coderabbit.yaml  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .worktree-meta  =2.0.0  =2.7  AGENTS.md  AGENT_FIX_SUMMARY.md  AGENT_HANGING_ANALYSIS.md  API_CALL_FLOW.md  AUDIT_SMALL_WINS_PLAN.md  CHANGELOG.md  CHANGES_SUMMARY.md  CLAUDE.md  CNAME  CODEBASE_TEST_COVERAGE_PLAN.md  CODE_QUALITY_REVIEW.md  CONCURRENCY_CHARTER.md  CONTRIBUTING.md  Cargo.toml  DEBUG_USAGE_GUIDE.md  ESC_DEBUG_GUIDE.md  ESC_DEBUG_USAGE.md  ESC_INTERRUPT_TEST_GUIDE.md  HARNESS.md  HOW_TO_RUN_RECURSIVE.md  HOW_TO_TEST_ESC_DEBUG.md  LOG.md  MANIFEST.in  MIGRATION_GUIDE.md  MODERN_PYTHON_STANDARDS_UPDATES.md  Makefile  Makefile.original  NEXT_AGENT_DOC_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  PLAN.md  PR45_FIX_PLAN.md  PR45_FIX_SUMMARY.md  (+254 more)
.artifacts/: README.md  issue_analysis_report_2026-03-21.md  issue_analysis_report_2026-04-04.md  query_data_flow.md  tunacode_action_audit.md
.beads/: issues.jsonl
.claude/: JOURNAL.md  MEMORY_ANCHOR_SPEC.md  NEXT_PR_RULES.md  README.md  SMELLS_REPORT.md  anchors.json  manifest.json  rag_knowledge.db  scratchpad_log.txt  tech-docs-maintainer.md  test_suite_issues_resolved.md
.devcontainer/: devcontainer.json
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.taskmaster/: config.json  state.json
.tickets/: psr-3149.md  psr-53c0.md  psr-b89d.md  psr-ba9c.md  psr-e147.md  psr-e90f.md  t-06af.md  t-46de.md  t-6162.md  t-6670.md  t-69f0.md  t-6f0e.md  t-7e92.md  t-9fa8.md  t-e5bf.md  t-ea8a.md  tun-00de.md  tun-0154.md  tun-0535.md  tun-05f8.md  tun-0db4.md  tun-0de7.md  tun-0fe3.md  tun-1012.md  tun-1160.md  tun-18bc.md  tun-1c18.md  tun-1c2c.md  tun-216b.md  tun-22f7.md  tun-2483.md  tun-2667.md  tun-27ea.md  tun-2cd6.md  tun-2d43.md  tun-2ddf.md  tun-2e7e.md  tun-2ef4.md  tun-3149.md  tun-31ec.md  (+107 more)
agent-tools/: WORKFLOW_GUIDE.md  agent_tools_prompt.xml  bankctl.sh  check_workflow.sh  scratchpad.sh  wakeup.sh
docs/: 2025-01-14-enhanced-thoughts-command.md  2025-05-30-fast-glob-prefilter-implementation.md  2025-05-30-json-fallback-and-configuration-fixes.md  2025-06-01-tunacode-v0.0.18-deployment-and-cleanup.md  2025-06-14-file-context-visibility-update.md  2025-06-14-orchestrator-response-handling.md  2025-06-18-documentation-reorganization.md  2025-07-18-dspy-integration-summary.md  2025-07-18-dspy-integration.md  2025-07-30-unified-logging-implementation.md  2025-07-31-random-test-files-cleanup.md  2025-07-31-streaming-extra-line-logging-fix.md  ADVANCED-CONFIG.md  ARCHITECTURE.md  CHANGELOG.md  CLI_EXTRA_LINE_FIX.md  CODE-STANDARDS.md  CODEBASE_TEST_COVERAGE_PLAN.md  CONTRIBUTING.md  DEVELOPMENT.md  ESC_KEY_IMPLEMENTATION.md  FEATURES.md  MAIN_AGENT_CHARACTERIZATION_GUIDE.md  README.md  RELEASE_FAQ_QUICKSTART.md  ROADMAP.md  STREAMING_FIX_SUMMARY.md  TOOLS.md  TROUBLESHOOTING.md  agent-architecture-flow.md  architect-mode-flowchart.mmd  compact-command-improvement-plan.md  deadcode.md  deployment.md  docs_audit.html  fast-glob-prefilter-enhancement.md  grep-search-improvements.md  hybrid-architect-mode.md  lsp-diagnostics.md  multi-turn-recursive-loop-issue.md  (+11 more)
documentation/: 2025-01-14-enhanced-thoughts-command.md  2025-01-27-development-session.md  2025-05-26-command-autocomplete-fix.md  2025-05-27-pre-publication-audit-fixes.md  2025-05-29-how-to-make-tools.md  2025-05-30-fast-glob-prefilter-implementation.md  2025-05-30-json-fallback-and-configuration-fixes.md  2025-06-14-file-context-visibility-improvements.md  2025-06-14-file-context-visibility-update.md  2025-06-14-orchestrator-response-handling.md  2025-06-15-architect-mode-fixes.md  2025-06-15-context-aware-architect.md  2025-06-16-architect-mode-context-aware.md  ADVANCED-CONFIG.md  ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT.md  FEATURES.md  README.md  TOOLS.md  agent_flows.md  architect-mode-bash-fix.md  compact-command-improvement-plan.md  grep-search-improvements.md  parallel-grep-architecture.md  parallelization-analysis.md  performance_improvement_qa_report.md  qa_report.md  react-agent-improvements.md  spelling-fixes.md
dspy_logs/: dspy_results_20250718_131520.json
examples/: grep_performance_demo.py  list_dir_demo.py  logging_config_example.json
llm-agent-tools/: .gitignore  agent_tools_prompt.xml  codemap.sh  context.sh  knowledge.sh  researcher.sh  scratchpad-multi.sh  setup-multi-agent.sh
llm-agent-tools/kb_synch/: Cargo.toml  anchor_drop.rs
llm-tooling/: agent_tools_prompt.xml  architect.sh  researcher.sh  scratchpad.sh
memory-bank/: activeContext.md  current_state_summary.md  memory-bank.md  productContext.md  product_context.md  progress.md  progress_overview.md  project_brief.md  projectbrief.md  systemPatterns.md  techContext.md  tech_context.md
notes/: 2025-05-29-how-to-make-tools.md
reports/: SMALL_WINS_AUDIT.md  dead_code_vulture.txt  unused_imports.txt
scripts/: check-defensive-slop.py  check-file-length.sh  check-naming-conventions.py  check-unused-constants.py  check_agents_freshness.py  check_markdown_frontmatter.py  check_unused_modules.py  dep-graph.py  dev-setup.sh  download_ripgrep.py  generate-dependency-map.py  generate-release-notes.sh  generate_structure_tree.py  grimp_layers_report.py  install-git-hooks.sh  install_linux.sh  playwright_cache.py  preview_tool_panels.py  publish_to_pip.sh  pydantic_usage_baseline.json  pydantic_usage_report.py  run-dead-imports.sh  run-pre-commit-hook.sh  run_gates.py  setup_dev_env.sh  startup_timer.py  todo_baseline.json  todo_scanner.py  ui_import_timer.py  uninstall.sh  uninstall_linux.sh  update_models_registry.sh  verify_dev_env.sh
src/: CAPABILITIES.md  README.md  __init__.py  agent.md  src_directory_map.md
tests/: CHARACTERIZATION_README.md  CHARACTERIZATION_TEST_PLAN.md  CHARACTERIZATION_TEST_PLAN_AGENT_MAIN.md  CHARACTERIZATION_TEST_PLAN_COMMANDS.md  FILE_OPERATIONS_TEST_GUIDE.md  TESTING_PHILOSOPHY.md  conftest.py  golden_baseline_thread_safety_resources.py  golden_baseline_tool_handler_authorization.py  test_actual_parallelism.py  (+141 more)
(+1730 files in other folders)
